# LifeOS

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_schema_hardening.py  0003_gamification.py  0004_pool_achievements_snapshots.py  0005_notifications.py  0006_vision_projects_link.py
backend/app/: main.py
backend/app/api/: deps.py  errors.py
backend/app/api/v1/: __init__.py  achievements.py  areas.py  (+8 more)
backend/app/core/: config.py  db.py
backend/app/models/: __init__.py  area.py  area_health_snapshot.py  associations.py  base.py  daily_activity_log.py  daily_pool_item.py  enums.py  notification.py  project.py  task.py  user.py  user_achievement.py  vision.py
backend/app/schemas/: __init__.py  achievement.py  area.py  common.py  daily_pool.py  export.py  notification.py  project.py  stats.py  task.py  user.py  vision.py
backend/app/services/: achievement_service.py  achievements_catalog.py  activity_log_service.py  area_service.py  daily_pool_service.py  export_service.py  health_score.py  notification_service.py  project_service.py  snapshot_service.py  stats_service.py  streak_service.py  task_service.py  user_service.py  vision_service.py  xp_service.py
backend/docs/: schema.md
backend/tests/: conftest.py  test_achievements.py  test_daily_pool.py  test_health_score.py  test_notifications.py  test_project_progress.py  test_streak.py  test_task_complete.py  test_task_dependencies.py  test_xp.py
(+90 files in other folders)
